--- a/app/views/usermanage/index.jade
+++ b/app/views/usermanage/index.jade
@@ -88,7 +88,7 @@ block content
                                                                     tr(onclick="onclick=location.href='/usermanage/#{usermanage[i]._id}/edit'")
                                                                         td.highlight(data-highlight='search.highlight.title') #{usermanage[i].compannyNm}
                                                                         td #{usermanage[i].userId}
-                                                                        td #{usermanage[i].userNm}
+                                                                        td #{usermanage[i].user_nm}
                                                                         td #{usermanage[i].deptNm}
                                                                         td #{usermanage[i].jikwe}
                                                                         td #{usermanage[i].jikchk}
