--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -40,13 +40,17 @@ block content
                                                 // Your awesome content goes here
                                                 .m-b-30
                                                     .form-group
+                                                        label.col-sm-2.control-label 회사코드
+                                                        .col-sm-9
+                                                            input.form-control(name='usermanage[company_cd]' type='text' required value='#{usermanage.company_cd}')
+                                                    .form-group
                                                         label.col-sm-2.control-label 회사명
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[compannyNm]' type='text' required value='#{usermanage.compannyNm}')
+                                                            input.form-control(name='usermanage[company_nm]' type='text' required value='#{usermanage.company_nm}')
                                                     .form-group
-                                                        label.col-sm-2.control-label 아이디
+                                                        label.col-sm-2.control-label email
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[userId]' type='text' value='#{usermanage.userId}')
+                                                            input.form-control(name='usermanage[email]' type='text' value='#{usermanage.email}' disabled)
                                                     .form-group
                                                         label.col-sm-2.control-label 비밀번호
                                                         .col-sm-9
@@ -54,43 +58,37 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label 사원명
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[user_nm]' type='text' value='#{usermanage.user_nm}')
+                                                            input.form-control(name='usermanage[employee_nm]' type='text' value='#{usermanage.employee_nm}')
                                                     .form-group
                                                         label.col-sm-2.control-label 부서명
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[deptNm]' type='text' value='#{usermanage.deptNm}')
+                                                            input.form-control(name='usermanage[dept_nm]' type='text' value='#{usermanage.dept_nm}')
                                                     .form-group
                                                         label.col-sm-2.control-label 직위
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[jikwe]' type='text' value='#{usermanage.jikwe}')
+                                                            input.form-control(name='usermanage[position_nm]' type='text' value='#{usermanage.position_nm}')
                                                     .form-group
                                                         label.col-sm-2.control-label 직책
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[jikchk]' type='text' value='#{usermanage.jikchk}')
-                                                    .form-group
-                                                        label.col-sm-2.control-label e-mail
-                                                        .col-sm-9
-                                                            input.form-control(name='usermanage[email]' type='email' value='#{usermanage.email}')
+                                                            input.form-control(name='usermanage[jikchk_nm]' type='text' value='#{usermanage.jikchk_nm}')
                                                     .form-group
                                                         label.col-sm-2.control-label 핸드폰번호
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[hpNo]' type='text' value='#{usermanage.hpNo}')
+                                                            input.form-control(name='usermanage[hp_telno]' type='text' value='#{usermanage.hp_telno}')
                                                     .form-group
-                                                        label.col-sm-2.control-label 생년월일
-                                                        .col-sm-9
-                                                            input.form-control(name='usermanage[birthdayDt]' type='text' value='#{usermanage.birthdayDt}')
+                                                        label.col-sm-2.control-label 회사주소1
+                                                        .col-sm-2
+                                                            input.form-control(name='company[dom_post_cd1]', type='text', value='#{usermanage.dom_post_cd1}' disabled)
+                                                        .col-sm-5
+                                                            input.form-control(name='company[dom_addr]', type='text', value='#{usermanage.dom_addr}' disabled)
                                                     .form-group
-                                                        label.col-sm-2.control-label 우편번호
+                                                        label.col-sm-2.control-label 회사주소2
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[post]' type='text' value='#{usermanage.post}')
-                                                    .form-group
-                                                        label.col-sm-2.control-label 회사주소
-                                                        .col-sm-9
-                                                            input.form-control(name='usermanage[address]' type='text' value='#{usermanage.address}')
+                                                            input.form-control(name='company[dom_addr2]', type='text', value='#{usermanage.dom_addr2}' disabled)
                                                     .form-group
                                                         label.col-sm-2.control-label 회사전화번호
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[callNo]' type='text' value='#{usermanage.callNo}')
+                                                            input.form-control(name='usermanage[office_tel_no]' type='text' value='#{usermanage.office_tel_no}' disabled)
                                                     .form-group
                                                         label.col-sm-2.control-label 사용자권한구분
                                                         .col-sm-9
