--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -71,11 +71,11 @@ block content
                       .form-group
                         label.col-sm-3.control-label 전화번호
                         .col-sm-3
-                          input.form-control(type='text', name='company[telno]', placeholder='')
+                          input.form-control(type='text', name='company[tel_no]', placeholder='')
                       .form-group
                         label.col-sm-3.control-label 팩스번호
                         .col-sm-3
-                          input.form-control(type='text', name='company[faxno]', placeholder='')
+                          input.form-control(type='text', name='company[fax_no]', placeholder='')
                       .form-group
                         label.col-sm-3.control-label 회사주소1
                         .col-sm-2
@@ -95,8 +95,8 @@ block content
                       .form-group
                         .col-sm-offset-3.col-sm-9.m-t-30
                           button.btn.btn-primary.waves-effect.waves-light(type='submit')
-                            | 저장 
-                            i.fa.fa-send.m-l-10
+                            i.fa.fa-send-o
+                            |  저장
                           button.btn.btn-default.waves-effect.m-l-5(type='reset') 취소
             // end row
           // end container
