--- a/app/views/company/show.jade
+++ b/app/views/company/show.jade
@@ -85,11 +85,11 @@ block content
                       .form-group
                       label.col-sm-3.control-label 전화번호
                       .col-sm-3
-                          input.form-control(type='text', name='company[telno]', readonly value='#{company.telno}', placeholder='')
+                          input.form-control(type='text', name='company[tel_no]', readonly value='#{company.tel_no}', placeholder='')
                       .form-group
                       label.col-sm-3.control-label 팩스번호
                       .col-sm-3
-                          input.form-control(type='text', name='company[faxno]', readonly value='#{company.faxno}',placeholder='')
+                          input.form-control(type='text', name='company[fax_no]', readonly value='#{company.fax_no}',placeholder='')
                       .form-group
                       label.col-sm-3.control-label 회사주소1
                       .col-sm-2
