--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -92,11 +92,11 @@ block content
                         .form-group
                           label.col-sm-3.control-label 전화번호
                           .col-sm-3
-                            input.form-control(type='text', name='company[telno]', value='#{company.telno}', placeholder='')
+                            input.form-control(type='text', name='company[tel_no]', value='#{company.tel_no}', placeholder='')
                         .form-group
                           label.col-sm-3.control-label 팩스번호
                           .col-sm-3
-                            input.form-control(type='text', name='company[faxno]', value='#{company.faxno}',placeholder='')
+                            input.form-control(type='text', name='company[fax_no]', value='#{company.fax_no}',placeholder='')
                         .form-group
                           label.col-sm-3.control-label 회사주소1
                           .col-sm-2
