--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -46,7 +46,7 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label 회사명
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[company_nm]' type='text' required value='#{usermanage.company_nm}')
+                                                            input.form-control(name='usermanage[company_nm]' type='text' required value='#{usermanage.company_nm}' disabled)
                                                     .form-group
                                                         label.col-sm-2.control-label email
                                                         .col-sm-9
