--- a/app/views/higherProcess/show.jade
+++ b/app/views/higherProcess/show.jade
@@ -22,7 +22,10 @@ block head
     //if lt IE 9
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-
+    script.
+        $(document).ready(function() { 
+            $('#user_flag').val('#{higherProcess.user_flag}');
+        });
 
 block content
       // ==============================================================
