--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -75,13 +75,14 @@ block content
                                 .form-group
                                     label.col-sm-2.control-label 진행구분
                                     .col-sm-2
-                                        select.form-control
-                                            option 전체
-                                            option 접수대기
-                                            option 결제처리중
-                                            option 처리중
-                                            option 미평가
-                                            option 완료
+                                        select.form-control(name='incident[process_flag]')
+                                            option(value ='') 선택하세요
+                                            - if (incident.length > 0) {
+                                                - for( var i = 0 ; length = incident.length > i ; i++ ){ //속도가 느리다고 알고 있음.
+                                                    option(value ='#{incident[i].process_flag}') #{incident[i].process_flag}
+                                                - }
+                                            - }
+
                                     label.col-sm-2.control-label 검색기간
                                     .col-sm-2
                                         select.form-control
