--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -1,8 +1,11 @@
 extends ../layouts/default
 block head 
     script(type='text/javascript').
-        function companyCd(companyCd){
-            $('#company_cd').val(companyCd);
+        function companyCd(){
+            $('#company_cd').val(($('#company_nm').val()));
+
+            alert(company.length);
+
         }
 
 block content
@@ -41,11 +44,11 @@ block content
                                                         .form-group
                                                             label.col-sm-2.control-label 회사코드
                                                             .col-sm-9
-                                                                input.form-control(id='company_cd' name='usermanage[company_cd]' type='text' required value='')
+                                                                input.form-control(id='company_cd' name='usermanage[company_cd]' type='text' required value='' disabled)
                                                         .form-group
                                                             label.col-sm-2.control-label 회사명
                                                             .col-sm-9
-                                                                select.form-control(id='company_nm' name='usermanage[company_nm]' onchange='companyCd('+"'#{company.com_cd}'"+')')
+                                                                select.form-control(id='company_nm' name='usermanage[company_nm]' onchange='companyCd()')
                                                                     option(value ='') 선택하세요
                                                                     - if (company.length > 0) {
                                                                         - for( var i = 0 ; length = company.length > i ; i++ ){ //속도가 느리다고 알고 있음.
@@ -59,7 +62,7 @@ block content
                                                         .form-group
                                                             label.col-sm-2.control-label 비밀번호
                                                             .col-sm-9
-                                                                input.form-control(name='usermanage[password]' type='text' required value='')
+                                                                input.form-control(name='usermanage[password]' type='password' required value='')
                                                         .form-group
                                                             label.col-sm-2.control-label 사원명
                                                             .col-sm-9
