--- a/app/views/higherProcess/list.jade
+++ b/app/views/higherProcess/list.jade
@@ -80,7 +80,7 @@ block content
                                 tr(onclick="onclick=location.href='/higherProcess/#{higherProcess[i]._id}/show'")
                                     td  #{higherProcess[i].higher_nm}  
                                     td.highlight(data-highlight='search.highlight.title') #{higherProcess[i].description}
-                                    td #{higherProcess[i].createdAt}
+                                    td #{higherProcess[i].created_at}
                                     td #{higherProcess[i].user_flag}
                             - }
                         - }else{
