--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -2,10 +2,17 @@ extends ../layouts/default
 block head 
     script(type='text/javascript').
         function companyCd(){
+            //객체값을 javascript에 매핑
+            var companyObj = !{JSON.stringify(company).replace(/<\//g, '<\\/')};
+            //alert(JSON.stringify(companyObj));
+            //선택된 회사 인덱스 값
+            var sIdx = $('#company_nm option').index($('#company_nm option:selected'));
+            sIdx = sIdx -1; //'선택하세요' 인덱스값 1을 빼줌
+            //선택값 매핑
             $('#company_cd').val(($('#company_nm').val()));
-
-            alert(company.length);
-
+            $('input[name="company[dom_post_cd1]"').val(companyObj[sIdx].zip_cd);
+            $('input[name="company[dom_addr]"').val(companyObj[sIdx].addr);
+            $('input[name="company[dom_addr2]"').val(companyObj[sIdx].addr2);
         }
 
 block content
@@ -63,6 +70,11 @@ block content
                                                             label.col-sm-2.control-label 비밀번호
                                                             .col-sm-9
                                                                 input.form-control(name='usermanage[password]' type='password' required value='')
+                                                        .form-group
+                                                            label.col-sm-2.control-label 새비밀번호
+                                                            .col-sm-9
+                                                                input.form-control(name='usermanage[password]' type='password' required value='')
+                                                        
                                                         .form-group
                                                             label.col-sm-2.control-label 사원명
                                                             .col-sm-9
